[package]
name = "tap"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.2"
anyhow = "1.0.72"
async-trait = "0.1.72"
ethereum-types = "0.14.1"
log = "0.4.19"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "bigdecimal", "rust_decimal"] }
tap_core = "0.5.1"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt"] }

[dev-dependencies]
ethers-signers = "2.0.8"
rstest = "0.18.1"
